SyndiShanX/user.css
/* ... */
/* Hover Background Image */
.main-card-card:hover, .main-contextMenu-menuItem:hover, #spicetify-playlist-list .GlueDropTarget:hover, .lyrics-lyrics-background {
	background-image: var(--bgHover)!important;
	background-clip: border-box!important;
	background-origin: padding-box!important;
	background-attachment: scroll!important;
	background-repeat: repeat!important;
	background-size: auto!important;
	background-position: left top!important;
}

/* Scrollbar */
.os-scrollbar {
  display: unset!important;
	background: 0 0!important;
	border: none!important;
	width: var(--scrollbar-width)!important;
}
.os-scrollbar-handle {
  border-radius: 20px!important;
  background: var(--scrollbar-thumb)!important;
	min-height: 60px!important;
}
.os-scrollbar-handle:hover {
  border-radius: 20px!important;
  background: var(--scrollbar-thumb-hover)!important;
}

/* Main Tweaks */
.main-leaderboardComponent-container {
	display: none!important;
}
.main-card-card, .Z35BWOA10YGn5uc9YgAp, .GenericModal {
	border-radius: 10px!important;
}
.main-rootlist-statusIcons {
	position: relative!important;
	right: 10px!important;
}
#spicetify-playlist-list .main-rootlist-rootlistItemLink {
	min-height: 35px!important;
}
.JUa6JJNj7R_Y3i4P8YUX {
	position: relative!important;
	top: 10px!important;
}
.x-settings-container {
	max-width: 95%!important;
}
.JRpZEVSn5LfbA9fwwOqQ {
	position: relative!important;
	max-height: 28px!important;
}
.main-contextMenu-menu .main-contextMenu-menuItem:nth-child(7) {
	display: none;
}
.eSMjmiD29Ox35O95waw6::before, .eSMjmiD29Ox35O95waw6::after {
	display: none;
}
.lyrics-lyrics-background {
	background-color: transparent!important;
}

/* Button Colors */
.main-addButton-active, .control-button--active, .control-button-heart[aria-checked=true], .main-trackList-statusChangeUp, .MBzbwWcyfbqSftBtnn3g button>svg,
.main-userWidget-active, input:checked~.x-toggle-indicatorWrapper, .connect-device-list-item--active, .connect-device-list-item--active .connect-device-list-item__device-subtitle,
.connect-device-list-item--active .connect-device-list-item__icon, .main-trackList-trackListRow.main-trackList-active .main-trackList-rowMarker,.main-trackList-trackListRow.main-trackList-active .main-trackList-rowTitle,
.m6Bvw7PNXw2WXqruLOLE, .main-addButton-active, .xbsDt2_VfIDs0cQOXvgf, .CCeu9OfWSwIAJqA49n84, .main-navBar-navBarItem .GlueDropTarget--active, .Yw9u5QqYvW1sY8hr729O svg,
.main-yourEpisodesButton-yourEpisodesIcon, .rqhyBEi1217s5l9KD42B:hover, .rOqbwjYwx0AIWTfoYOQe:hover, .eymcN9Ndbrbe5jR7URP_:hover, .UeXQSrlNnaXUBtIOShTh:hover,
.ioDnN5QkrvTdd8oOrl2h, .main-trackList-trackListRow.main-trackList-active:hover .main-trackList-rowMarker,.main-trackList-trackListRow.main-trackList-active:hover .main-trackList-rowTitle,
.main-trackList-trackListRow.main-trackList-active:focus-within .main-trackList-rowMarker,.main-trackList-trackListRow.main-trackList-active:focus-within .main-trackList-rowTitle,
.control-button--active, .control-button--active:not(.control-button--disabled):focus,.control-button--active:not(.control-button--disabled):hover, .control-button--active:not(.control-button--disabled):active:focus,.control-button--active:not(.control-button--disabled):active:hover,
.main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA, .main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):focus,.main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):hover, .main-shuffleButton-button.OF_3F0SQCsBtL1jSTlTA:not([disabled]):focus:not(:focus-visible):not(:hover),
.main-repeatButton-button.tP0mccyU1WAa7I9PevC1, .main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):focus,.main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):hover, .main-repeatButton-button.tP0mccyU1WAa7I9PevC1:not([disabled]):focus:not(:focus-visible):not(:hover) {
	color: #35AFEA!important;
}
.r6zw1NLBxpB2YWcQQkUn, .r6zw1NLBxpB2YWcQQkUn:focus, .xbsDt2_VfIDs0cQOXvgf:after, .main-navBar-navBarItem .GlueDropTarget--active:after, .Mvo56wLT_lMG_re9vA7W:after,
.v1Gs5xaHy8aBhUMEobSn:after {
	border-color: #35AFEA!important;
	color: #35AFEA!important;
}
.encore-bright-accent-set, .r6zw1NLBxpB2YWcQQkUn:after, .WuHfzknUICVJtLZJU_30, .PJuB4n2TjjZFBiWAW2zx, .control-button--active-dot:after,
.main-playButton-PlayButton.main-playButton-primary, .r6zw1NLBxpB2YWcQQkUn:focus:after, input:checked:hover:not([disabled]):not(:active)~.x-toggle-indicatorWrapper {
	background-color: #35AFEA!important;
}
.main-rootlist-dropIndicator, .main-rootlist-rootlistItem.oPcAu3pJOaYgzzVOjJqt:before, .main-rootlist-rootlistItem.EAJQIRtPUCq6sn2ioXpl:after,
.main-trackList-trackListRow.main-trackList-dropTargetBefore:before, .main-trackList-trackListRow.main-trackList-dropTargetAfter:after, .aCwCCeV0KAq6w4Zzf7oE {
	background: #35AFEA!important;
}
.main-progressRing-circleColor {
	stroke: #35AFEA!important;
}
.novF8wEdTg7z80q3Ykws .qYsWmMXU2vS2COWabAU3, .control-button--active {
	fill: #35AFEA!important;
}
.encore-dark-theme .encore-bright-accent-set, .encore-dark-theme .encore-positive-set {
	--background-base: #35AFEA;
	--background-highlight: #35AFEA;
	--background-elevated-base: #35AFEA;
	--background-elevated-highlight: #35AFEA;
	--background-elevated-press: #35AFEA;
	--background-tinted-base: #35AFEA;
	--background-tinted-highlight: #35AFEA;
	--background-tinted-press: #35AFEA;
	--background-unsafe-for-small-text-base: #35AFEA;
	--background-unsafe-for-small-text-highlight: #35AFEA;
	--background-unsafe-for-small-text-press: #35AFEA;
	--decorative-subdued: #35AFEA;
	--text-bright-accent: #35AFEA;
	--text-positive: #35AFEA;
	--essential-bright-accent: #35AFEA;
	--essential-positive: #35AFEA;
	--is-active-fg-color: #35AFEA;
}

/* User Dropdown */
.main-userWidget-dropDownMenu {
	position: relative!important;
	right: 150px!important;
}

/* Notification Bubble */
.main-notificationBubble-NotificationBubble {
	background-color: var(--blue)!important;
}
/* ... */

